# tigrillo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  setup.py
data/configs/: default_log.conf  default_ros_optim.conf  default_ros_run.conf  sine_ros_optim.conf  sine_ros_run.conf
data/models/: model.sdf  tigrillo.mjcf  tigrillo.sdf  tigrillo_feet.sdf
data/robots/: plane.urdf  tigrillo.mjcf  tigrillo.sdf
data/worlds/: tigrillo.world  tigrillo_feet.world  tigrillo_feet_rl.world
examples/: run_openloop_cpg.py  sim_bullet_test.py
examples/run/: main.py  nrp_control.py  openloop_cpg.py  run_exp.py  standup.py  wakl_nrp.py  walk_nrp.py
examples/sim/: experiment.py  gz_plugin_test.py  main.py  tigrillo_ros
experiments/: run_nrp_res.py
models/: convert_dxf_to_dae.py  model.sdf  tigrillo.mjcf  tigrillo.sdf
models/tigrillo_dae/: femur.dae  foot.dae  front.dae  hind.dae  middle.dae  tibia.dae
models/tigrillo_dxf/: femur.dxf  foot.dxf  front.dxf  hind.dxf  middle.dxf  tibia.dxf
models/tigrillo_stl/: femur.stl  foot.stl
src/: analysis.py  control.py  experiment.py  main.py  model.py  optim.py  physics.py  tigrillo_ros  utils.py
src/experiments/: create.py  generate_model.py  load_model.py  optimization.py
src/simulation/: Simulation.cpp
src/tigrillo_plugin/: tigrillo_plugin.cc
tigrillo/: __init__.py
tigrillo/analysis/: imu_analysis.py  optim.py  optim_analysis.py  trajectory.py
tigrillo/core/: control.py  model.py  optim.py  physics.py  timing.py  utils.py
tigrillo/other/gz_plugin/: CMakeLists.txt  plugin_test.py
tigrillo/rpi/: robot.py  uart.py  (+3 more)
(+11 files in other folders)
